# aws_util

./: .gitignore  README.md  index.html  install.md  mk_docs.sh  pyproject.toml  setup.py  venv.sh
aws_util/: __main__.py  ecs_utils.py  profile.py
docs/: Makefile  index.rst  installation.rst  usage.rst
docs/source/: conf.py  index.rst  installation.rst  troubleshooting.rst  usage.rst
docs/source/_static/: copy-button.js
tests/: test_ecs_utils.py
